--- a/chart/angular.json
+++ b/chart/angular.json
@@ -27,7 +27,7 @@
                         "styles": [
                             "src/styles.css"
                         ],
-                        "scripts": ["node_modules/chart.js/dist/chart.min.js"]
+                        "scripts": []
                     },
                     "configurations": {
                         "production": {
@@ -51,12 +51,10 @@
                             "extractLicenses": false,
                             "sourceMap": true,
                             "namedChunks": true,
-                            "fileReplacements": [
-                              {
+                            "fileReplacements": [{
                                 "replace": "src/environments/environment.ts",
                                 "with": "src/environments/environment.development.ts"
-                              }
-                            ]
+                            }]
                         }
                     },
                     "defaultConfiguration": "production"
