--- a/chart/package.json
+++ b/chart/package.json
@@ -19,6 +19,7 @@
         "@angular/platform-browser-dynamic": "^15.2.0",
         "@angular/router": "^15.2.0",
         "chart.js": "^4.2.1",
+        "chartjs-plugin-zoom": "^2.0.1",
         "install": "^0.13.0",
         "rxjs": "~7.8.0",
         "zone.js": "~0.12.0"
